<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up_activity"
    >

    <TextView
        android:id="@+id/textCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:letterSpacing=".1"
        android:text="@string/createAccount"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toGetStarted"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textCreateAccount"
        app:layout_constraintStart_toStartOf="@+id/textCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/textCreateAccount" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="15sp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/user"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="text"
        android:drawablePadding="12dp"
        android:paddingStart="12sp"
        android:textColor="@color/ParagraphTextColor"
        android:textColorHint="@color/SecondaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/textGetStarted"
        app:layout_constraintStart_toStartOf="@+id/textGetStarted"
        app:layout_constraintTop_toBottomOf="@+id/textGetStarted" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textColor="@color/ParagraphTextColor"
        android:textColorHint="@color/SecondaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:textColor="@color/ParagraphTextColor"
        android:textColorHint="@color/SecondaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="12dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textColor="@color/ParagraphTextColor"
        android:textColorHint="@color/SecondaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/lock"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/eye_show_svgrepo_com"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:textColor="@color/ParagraphTextColor"
        android:textColorHint="@color/SecondaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/editTextAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/lock"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/eye_show_svgrepo_com"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/textBoxConfirmPassword"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:textColor="@color/ParagraphTextColor"
        android:textColorHint="@color/SecondaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignup"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/blue"
        android:elevation="5dp"
        android:letterSpacing=".1"
        android:text="@string/Signup"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    <TextView
        android:id="@+id/textAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:layout_marginTop="15dp"
        android:textColor="@color/SubHeadingTextColor"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignup"
        app:layout_constraintStart_toStartOf="@+id/buttonSignup"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLoginNow"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@color/blue"
        android:letterSpacing=".1"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAlreadyHaveAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>